Fix pdf link and menu on smaller screens

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -135,6 +135,7 @@ h3 {
 
   header menu {
     padding: 0;
+    gap: 7px;
     margin: 10px auto;
   }
 }
